StudentSupportCallForm: Remove extra space at bottom of page and fix submit button colors #925

--- a/app/instructionalSupport/studentSupportCallForm/studentSupportCallForm.css
+++ b/app/instructionalSupport/studentSupportCallForm/studentSupportCallForm.css
@@ -217,7 +217,8 @@ h4, .h4 {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding-left: 15px;
+	padding-left: 7%;
+	padding-right: 7%;
 	border-radius: 4px;
 	border: 1px solid #adadad;
 	height: 50px;
